--- a/JRListArticle/Presentation/Resources/Localizable/en.lproj/Localizable.strings
+++ b/JRListArticle/Presentation/Resources/Localizable/en.lproj/Localizable.strings
@@ -11,3 +11,5 @@
 
 "defaultError" = "Algo salió mal, no pudimos conectarnos.";
 "networkConnectionError" = "No se detectó conexión a internet, valida si tienes activo tus datos o Wifi.";
+"titleList" = "List Articles";
+"titleDetail" = "Article Detail";
